--- a/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="~/Home/Index">Home <span class="sr-only">(current)</span></a></li>
+                    <li><a href="~/Admin/PropertyAdmin/Index">Manage Project</a></li>
                     <li><a href="~/Home/About">About Us</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
