--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
@@ -20,167 +20,154 @@
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.ID)
-        <div class="form-group">
-            @Html.LabelFor(model => model.PropertyName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PropertyName)
-                @Html.ValidationMessageFor(model => model.PropertyName)
+
+        <div class="col-xs-6" style=" margin-left: 165px; height: 425px; width: 380px;">
+            <div class="form-group">
+                @Html.LabelFor(model => model.PropertyName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10" style=" width: 230px; margin-left: 50px;">
+                    @Html.EditorFor(model => model.PropertyName, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.PropertyName)
+                </div>
             </div>
-        </div>
 
 
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PropertyType_ID, "PropertyType", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("PropertyType_ID", new SelectList(ViewBag.property_type, "ID", "CodeType", Model.PROPERTY_TYPE))
-                @Html.ValidationMessageFor(model => model.PropertyType_ID)
+            <div class="form-group">
+                @Html.LabelFor(model => model.PropertyType_ID, "PropertyType", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10" style=" width: 230px; margin-left: 50px;">
+                        @Html.DropDownList("PropertyType_ID",  new SelectList(ViewBag.property_type, "ID", "CodeType", Model.PROPERTY_TYPE))
+                        @Html.ValidationMessageFor(model => model.PropertyType_ID)
+                    </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Content)
-                @Html.ValidationMessageFor(model => model.Content)
+            <div class="form-group">
+                @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10" style=" width: 230px; margin-left: 50px;">
+                    @Html.EditorFor(model => model.Content, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.Content)
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Street_ID, "Street", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-
-                @Html.DropDownList("Street_ID", new SelectList(ViewBag.StreetName, "ID", "StreetName", Model.STREET))
-                @Html.ValidationMessageFor(model => model.Street_ID)
+            <div class="form-group">
+                @Html.LabelFor(model => model.Street_ID, "Street", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10" style=" width: 230px; margin-left: 50px;">
+                        @Html.DropDownList("Street_ID", new SelectList(ViewBag.StreetName, "ID", "StreetName", Model.STREET), new { @Styles = "width: 175px; height: 25px;" })
+                        @Html.ValidationMessageFor(model => model.Street_ID)              
+                    </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Ward_ID, "Ward", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Ward_ID", new SelectList(ViewBag.WardName, "ID", "WardName", Model.WARD))
-                @Html.ValidationMessageFor(model => model.Ward_ID)
+            <div class="form-group">
+                @Html.LabelFor(model => model.Ward_ID, "Ward", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10" style=" width: 230px; margin-left: 50px;">
+                        @Html.DropDownList("Ward_ID", new SelectList(ViewBag.WardName, "ID", "WardName", Model.WARD), new { @Styles = "width: 175px; height: 25px;" })
+                        @Html.ValidationMessageFor(model => model.Ward_ID)
+                    </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.District_ID, "District", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("District_ID", new SelectList(ViewBag.District, "ID", "DistrictName", Model.DISTRICT))
-                @Html.ValidationMessageFor(model => model.District_ID)
+            <div class="form-group">
+                @Html.LabelFor(model => model.District_ID, "District", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10" style=" width: 230px; margin-left: 50px;">
+                        @Html.DropDownList("District_ID", new SelectList(ViewBag.District, "ID", "DistrictName", Model.DISTRICT), new { @Styles = "width: 175px; height: 25px;" })
+                        @Html.ValidationMessageFor(model => model.District_ID)
+                    </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Price)
-                @Html.ValidationMessageFor(model => model.Price)
+            <div class="form-group">
+                @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10" style=" width: 230px; margin-left: 50px;">
+                    @Html.EditorFor(model => model.Price, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.Price)
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.UnitPrice, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UnitPrice)
-                @Html.ValidationMessageFor(model => model.UnitPrice)
+            <div class="form-group">
+                @Html.LabelFor(model => model.UnitPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10" style=" width: 230px; margin-left: 50px;">
+                    @Html.EditorFor(model => model.UnitPrice, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.UnitPrice)
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Area, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Area)
-                @Html.ValidationMessageFor(model => model.Area)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.BedRoom, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BedRoom)
-                @Html.ValidationMessageFor(model => model.BedRoom)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.BathRoom, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BathRoom)
-                @Html.ValidationMessageFor(model => model.BathRoom)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PackingPlace, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PackingPlace)
-                @Html.ValidationMessageFor(model => model.PackingPlace)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserID, "UserID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("UserID", new SelectList(ViewBag.UserName, "ID", "Email", Model.USER))
-                @Html.ValidationMessageFor(model => model.UserID)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Created_at, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Created_at)
-                @Html.ValidationMessageFor(model => model.Created_at)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Create_post, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Create_post)
-                @Html.ValidationMessageFor(model => model.Create_post)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Status_ID, "Status_ID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Status_ID", new SelectList(ViewBag.ProJectStatus, "ID", "Status_Name", Model.PROJECT_STATUS))
-                @Html.ValidationMessageFor(model => model.Status_ID)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Note, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Note)
-                @Html.ValidationMessageFor(model => model.Note)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Updated_at, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Updated_at)
-                @Html.ValidationMessageFor(model => model.Updated_at)
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @*<img src="~/Images/@Model.Avatar" width="200" /> <br><br>*@
-                <div>
-                    @using (Html.BeginForm("FileUpload", "PropertyAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                    {
-                        <input type="file" name="ImageFile" />
-                        @*@Html.EditorFor(model => model.Images, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Images, "", new { @class = "text-danger" })*@
-                    }
+            <div class="form-group">
+                @Html.LabelFor(model => model.Area, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10" style=" width: 230px; margin-left: 50px;">
+                    @Html.EditorFor(model => model.Area, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.Area)
                 </div>
             </div>
         </div>
-
+        <!-- ********-->
+        <div class="col-xs-6">
+            <div class="form-group">
+                @Html.LabelFor(model => model.BedRoom, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BedRoom, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.BedRoom)
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.BathRoom, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BathRoom, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.BathRoom)
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.PackingPlace, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.PackingPlace, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.PackingPlace)
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.UserID, "UserID", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                        @Html.DropDownList("UserID", new SelectList(ViewBag.UserName, "ID", "Email", Model.USER), new { @Styles = "width: 175px; height: 25px;" })
+                        @Html.ValidationMessageFor(model => model.UserID)
+                    </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Created_at, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Created_at, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.Created_at)
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Create_post, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Create_post, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.Create_post)
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Status_ID, "Status_ID", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                        @Html.DropDownList("Status_ID", new SelectList(ViewBag.ProJectStatus, "ID", "Status_Name", Model.PROJECT_STATUS))
+                        @Html.ValidationMessageFor(model => model.Status_ID)
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Note, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Note, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.Note)
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Updated_at, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Updated_at, new { @class = "shapestyle" })
+                    @Html.ValidationMessageFor(model => model.Updated_at)
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @*<img src="~/Images/@Model.Avatar" width="200" /> <br><br>*@
+                    <div>
+                        @using (Html.BeginForm("FileUpload", "PropertyAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                        {
+                            <input type="file" name="ImageFile" />
+                            @*@Html.EditorFor(model => model.Images, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Images, "", new { @class = "text-danger" })*@
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
         @*<div class="form-group">
                 @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -189,13 +176,12 @@
                 </div>
             </div>*@
 
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-secondary btn-shape" style="font-weight: bold;" />
             </div>
         </div>
-    </div>
+     </div>
 }
 
 <div>
