--- a/PPCRental_Project/PPCRental_Project/Content/bootstrap.css
+++ b/PPCRental_Project/PPCRental_Project/Content/bootstrap.css
@@ -414,6 +414,7 @@ p {
 @media (min-width: 768px) {
   .lead {
     font-size: 21px;
+    
   }
 }
 
@@ -1962,7 +1963,7 @@ textarea.input-lg {
 .form-horizontal .radio-inline,
 .form-horizontal .checkbox-inline {
   padding-top: 7px;
-  margin-top: 0;
+  margin-top: ;
   margin-bottom: 0;
 }
 
@@ -1993,7 +1994,8 @@ textarea.input-lg {
 
 @media (min-width: 768px) {
   .form-horizontal .control-label {
-    text-align: right;
+    text-align: left;
+    margin-bottom:25px;
   }
 }
 
