--- a/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     List<PPCRental_Project.Models.STREET> lstStreet = Model.ToList()[2] as List<PPCRental_Project.Models.STREET>;
     List<PPCRental_Project.Models.WARD> lstWard = Model.ToList()[3] as List<PPCRental_Project.Models.WARD>;
     List<PPCRental_Project.Models.PROPERTY_TYPE> lstType = Model.ToList()[4] as List<PPCRental_Project.Models.PROPERTY_TYPE>;
-    int max = 10;
+    int max = 9;
     int page = (int)ViewBag.Page;
     lstProperty = lstProperty.Skip((page - 1) * max).Take(max).ToList();
 }
@@ -14,7 +14,7 @@
     ViewBag.Title = "Home Page";
 }
 
- <!--Slider Bootstrap-->
+<!--Slider Bootstrap-->
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -26,7 +26,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img class="img-rounded img-responsive" src="~/Images/1.jpg" /  >
+            <img class="img-rounded img-responsive" src="~/Images/1.jpg" />  >
             <div class="carousel-caption">
                 ...
             </div>
@@ -61,62 +61,74 @@
     <!--View List-->
     <div class="col-sm-9 ">
         <div class="row">
-            @{
-    foreach (var item in lstProperty)
-    {
-        <div class="col-sm-6 col-md-4 wow slideInLeft">
-            <div class="thumbnail projectcomponent">
-                <img class="img-rounded img-responsive display-img" src="@Url.Content(item.Avatar)" alt="@item.PropertyName">
-                <div class="caption">
-                    <!--Boundary of project title-->
-                    <div class="thumbnail-title">
-                        @if (@item.PropertyName.Length > 36)
-                        {
-                            <h4>@item.PropertyName.Substring(0, 36)...</h4>
-                        }
-                        else
-                        {
-                            <h4>@item.PropertyName</h4>
-                        }
-                    </div>
-                    <!--End Boundary of project title-->
-                    <!--Boundary of project short content-->
-                    <div class="thumbnail-content">
-                        <!--Boundary of price-->
-                        <p class="display-price">
-                            <span class="glyphicons glyphicons-money"></span>
-                            @item.Price @item.UnitPrice
-                        </p>
-                        <!--End Boundary of price-->
-                        <!--Boundary of content-->
-                        <p class="display-content">
-                            @if (@item.Content.Length > 90)
-                            {
-                                @item.Content.Substring(0, 90)
-                            }
-                            else
-                            {
-                                @item.Content
-                            }
 
-                        </p>
-                        <!--End Boundary of content-->
+            @foreach (var item in lstProperty)
+            {
+                <div class="col-sm-6 col-md-4 wow slideInLeft">
+                    <div class="thumbnail projectcomponent">
+                        <img class="img-rounded img-responsive display-img" src="@Url.Content(item.Avatar)" alt="@item.PropertyName">
+                        <div class="caption">
+                            <!--Boundary of project title-->
+                            <div class="thumbnail-title">
+                                @if (@item.PropertyName.Length > 36)
+                                {
+                                    <h4>@item.PropertyName.Substring(0, 36)...</h4>
+                                }
+                                else
+                                {
+                                    <h4>@item.PropertyName</h4>
+                                }
+                            </div>
+                            <!--End Boundary of project title-->
+                            <!--Boundary of project short content-->
+                            <div class="thumbnail-content">
+                                <!--Boundary of price-->
+                                <p class="display-price">
+                                    <span class="glyphicons glyphicons-money"></span>
+                                    @item.Price @item.UnitPrice
+                                </p>
+                                <!--End Boundary of price-->
+                                <!--Boundary of content-->
+                                <p class="display-content">
+                                    @if (@item.Content.Length > 90)
+                                    {
+                                        @item.Content.Substring(0, 90)
+                                    }
+                                    else
+                                    {
+                                        @item.Content
+                                    }
 
-                        <p>
-                            <span class="glyphicon glyphicon-home"></span>   @item.DISTRICT.DistrictName, @item.WARD.WardName, @item.STREET.StreetName
-                        </p>
-                    </div>
-                    <!--End Boundary of project short content-->
-                    <!--Boundary of Detail button-->
-                    <div class="thumbnail-footer">
-                        <a href="~/Project/Detail/@item.ID" class="btn btn-primary" role="button" id="btn-detail">Xem chi tiết</a>
+                                </p>
+                                <!--End Boundary of content-->
+
+                                <p>
+                                    <span class="glyphicon glyphicon-home"></span>   @item.DISTRICT.DistrictName, @item.WARD.WardName, @item.STREET.StreetName
+                                </p>
+                            </div>
+                            <!--End Boundary of project short content-->
+                            <!--Boundary of Detail button-->
+                            <div class="thumbnail-footer">
+                                <a href="~/Project/Detail/@item.ID" class="btn btn-primary" role="button" id="btn-detail">Xem chi tiết</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
+
+            }
         </div>
-                
-    }
-}
+        <div class="pagina-align">
+            <ul class="pagination">
+                <li class="waves-effect"><a href="@Url.Action("Index", new { page = page - 1 })">Previous</a></li>
+                <li class="active"><a href="@Url.Action("Index", new { page = page })">1</a></li>
+                <li class="waves-effect"><a href="@Url.Action("Index", new { page = page + 1 })">2</a></li>
+                <li class="waves-effect"><a href="@Url.Action("Index", new { page = page + 2 })">3</a></li>
+                <li class="waves-effect"><a href="@Url.Action("Index", new { page = page + 3 })">4</a></li>
+                <li class="waves-effect"><a href="@Url.Action("Index", new { page = page + 4 })">5</a></li>
+                <li class="waves-effect"><a href="@Url.Action("Index", new { page = page + 1 })">Next</a></li>
+            </ul>
+        </div>
+    </div>
     <!--Filter-->
     <form role="search" action="@Url.Action("Search","Project")" method="get">
 
@@ -134,15 +146,14 @@
                         <option selected value="0">--Chọn Quận--</option>
                         @foreach (var item in lstDistrict)
                         {
-                            if (item.ID >= 31 && item.ID <= 54) 
+                            if (item.ID >= 31 && item.ID <= 54)
                             {
                                 <option value="@item.ID">@item.DistrictName</option>
                             }
-                            
+
                         }
                     </select>
                     <!--End District Filter-->
-            
                     <!--Type Filter-->
                     <select name="PropertyType" class="dropdown col-md-12 component_filter">
                         <option selected value="0">--Chọn Loại Dự Án</option>
@@ -152,7 +163,6 @@
                         }
                     </select>
                     <!--End Type Filter-->
-
                     <!--Bedroom Filter-->
                     <select name="BedRoom" class="dropdown col-md-12 component_filter">
                         <option value="0" selected>--Chọn Số Phòng Ngủ--</option>
@@ -163,7 +173,6 @@
                         <option value="5">5</option>
                     </select>
                     <!--End Bedroom Filter-->
-
                     <!--Bathroom Filter-->
                     <select name="BathRoom" class="dropdown col-md-12 component_filter">
                         <option value="0" selected>--Chọn Số Phòng Tắm--</option>
@@ -174,7 +183,6 @@
                         <option value="5">5</option>
                     </select>
                     <!--End Bathroom Filter-->
-
                     <!--Price min Filter-->
                     <select name="Price_Min" class="dropdown col-md-12 component_filter">
                         <option value="0" " selected>--Chọn Giá Tối Thiểu--</option>
@@ -185,7 +193,6 @@
                         <option value="100000">100000</option>
                     </select>
                     <!--End price min filter-->
-
                     <!--Price max Filter-->
                     <select name="Price_Max" class="dropdown col-md-12 component_filter">
                         <option value="0" selected>--Chọn Giá Tối Đa--</option>
@@ -208,4 +215,5 @@
 
     </form>
     <!--End Filter-->
+
 </div>
