complete pagination but yet Alert Jquery

--- a/PPCRental_Project/PPCRental_Project/Content/bootstrap.css
+++ b/PPCRental_Project/PPCRental_Project/Content/bootstrap.css
@@ -6829,7 +6829,8 @@ td.visible-print {
     width: 120px;
     height: 40px;
 }
-/*pagination*/
+/*pagination JQuery*/
 .pagina-align {
     margin-left: 263px;
 }
+
