--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -220,7 +220,7 @@
                     </form>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
+                    <a class="nav-link" href="~/Account/LogOut">
                         <i class="fa fa-fw fa-sign-out"></i>Logout
                     </a>
                 </li>
