--- a/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
@@ -39,8 +39,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="~/Home/Index">Home <span class="sr-only">(current)</span></a></li>
-                    <li><a href="~/Admin/PropertyAdmin/Index">Manage Project</a></li>
                     <li><a href="~/Home/About">About Us</a></li>
+                    @if (Session["UserID"] != null)
+                    {
+                        <li><a href="~/Agency/PropertyAgency/Index">My Project</a></li>
+                        <li><a href="~/Account/LogOut">Log out</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="/Account/Login">Login</a></li>
+                    }
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
