add agency view list project, update login

--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
@@ -9,6 +9,13 @@
     {
         Response.Redirect("~/Home/Index");
     }
+    else
+    {
+        if (Session["UserRole"].ToString().Equals("1"))
+        {
+            Response.Redirect("~/Home/Error");
+        }
+    }
 }
 
 <h2>Edit</h2>
