--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Index.cshtml
@@ -7,6 +7,13 @@
     {
         Response.Redirect("~/Home/Index");
     }
+    else 
+    {
+        if (Session["UserRole"].ToString().Equals("1")) 
+        {
+            Response.Redirect("~/Home/Error"); 
+        }
+    }
 }
 
 <h2>IndexAdmin</h2>
