--- a/PPCRental_Project/PPCRental_Project/Views/Project/Search.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Project/Search.cshtml
@@ -56,7 +56,7 @@
         {
             <div class="col-sm-6 col-md-4 wow fadeIn">
                 <div class="thumbnail projectcomponent1">
-                    <img class="img-rounded img-responsive" src="~/Images/@item.Avatar" alt="@item.PropertyName">
+                    <img class="img-rounded img-responsive" src="@Url.Content(@item.Avatar)" alt="@item.PropertyName">
                     <div class="caption">
                         <h4>@item.PropertyName</h4>
                         <p>Loại dự án: @item.PROPERTY_TYPE.Description</p>
