--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
@@ -86,23 +86,60 @@
                     @Html.ValidationMessageFor(model => model.Price)
                 </div>
             </div>
+            
+            <div class="form-group"  >
+                @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10"  >
+                    <div  style="margin-left: 50px;">
+                    <img src="@Url.Content(Model.Avatar)" width="100px">
+                    </div>
+                    <div style="margin-left: 50px;">
+                        <input type="file" name="ImageFile" />
+                    </div>
+                </div>
+
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @*<img src="@Url.Content(Model.Avatar)" width="100px">*@
+                    <div style="margin-left: 50px;">
+                        @if (Model.Images != null)
+                        {
+                            string[] chuoi = Model.Images.Split(',');
+                            for (int i = 0; i < chuoi.Count() - 1; i++)
+                            {
+                                <img src="@Url.Content(@chuoi[i])" width="100px" alt="@Model.Images" />
+                            }
+                        }
+                    </div>
+                    <div style="margin-left: 50px;">
+
+                        <input type="file" name="ImageFile2" multiple />
+                        @*@Html.EditorFor(model => model.Images, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Images, "", new { @class = "text-danger" })*@
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!-- ********-->
+        <div class="col-xs-6">
             <div class="form-group">
                 @Html.LabelFor(model => model.UnitPrice, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10" style=" width: 230px; margin-left: 50px;">
+                <div class="col-md-10" style=" width: 230px; ">
                     @Html.EditorFor(model => model.UnitPrice, new { @class = "shapestyle" })
                     @Html.ValidationMessageFor(model => model.UnitPrice)
                 </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.Area, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10" style=" width: 230px; margin-left: 50px;">
+                <div class="col-md-10" style=" width: 230px;">
                     @Html.EditorFor(model => model.Area, new { @class = "shapestyle" })
                     @Html.ValidationMessageFor(model => model.Area)
                 </div>
             </div>
-        </div>
-        <!-- ********-->
-        <div class="col-xs-6">
             <div class="form-group">
                 @Html.LabelFor(model => model.BedRoom, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -166,34 +203,7 @@
                     @Html.ValidationMessageFor(model => model.Updated_at)
                 </div>
             </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @*<img src="@Url.Content(Model.Avatar)" width="100px">*@
-                    <div>
-                      
-                            <input type="file" name="ImageFile" />
-                            @*@Html.EditorFor(model => model.Images, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Images, "", new { @class = "text-danger" })*@
-                        
-                    </div>
-                </div>
-                
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @*<img src="@Url.Content(Model.Avatar)" width="100px">*@
-                    <div>
-
-                        <input type="file" name="ImageFile2" multiple />
-                        @*@Html.EditorFor(model => model.Images, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Images, "", new { @class = "text-danger" })*@
-
-                    </div>
-                </div>
-
-            </div>
+            
         </div>
         @*<div class="form-group">
                 @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
