demo post property agency

--- a/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
@@ -51,6 +51,8 @@
                             <li><a href="~/Admin/PropertyAdmin/Index">Manage</a></li>
                         }
 
+                        <li><a href="~//Agency/PropertyAgency/Create">Post</a></li>
+
                         <li><a href="~/Account/LogOut">Log out</a></li>
                     }
                     else
@@ -77,6 +79,6 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    @RenderSection("Srcipts", required: false)
 </body>
 </html>
