--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
@@ -97,8 +97,8 @@
                         <input type="file" name="ImageFile" />
                     </div>
                 </div>
-
             </div>
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -114,15 +114,11 @@
                         }
                     </div>
                     <div style="margin-left: 50px;">
-
-                        <input type="file" name="ImageFile2" multiple />
-                        @*@Html.EditorFor(model => model.Images, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Images, "", new { @class = "text-danger" })*@
-
+                        <input type="file" name="ImageFile2" multiple />                    
                     </div>
                 </div>
-
             </div>
+
         </div>
         <!-- ********-->
         <div class="col-xs-6">
@@ -205,13 +201,7 @@
             </div>
             
         </div>
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Images)
-                    @Html.ValidationMessageFor(model => model.Images)
-                </div>
-            </div>*@
+
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
@@ -225,6 +215,29 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@*@section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }*@
+@section Srcipts{
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+
+
+    <script>
+        $('#Ward_ID').select2();
+        $('#District_ID').select2({ dropdownAutoWidth: true });
+        $('#Street_ID').select2();
+        $('#District_ID').on('change', function () {
+            $('#Street_ID').empty();
+            $('#Ward_ID').empty();
+            $.getJSON('/PropertyAdmin/GetStreet?District_id=' + $('#District_ID').val(),
+                function (json) {
+                    $('#Street_ID').select2({ data: json });
+
+                });
+            $.getJSON('/PropertyAdmin/GetWard?District_id=' + $('#District_ID').val(),
+                function (json) {
+                    $('#Ward_ID').select2({ data: json });
+                });
+        });
+    </script>
+}
+
+
