--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -286,6 +286,7 @@
         <!-- Custom scripts for this page-->
         <script src="/Assets/js/sb-admin-datatables.min.js"></script>
         <script src="/Assets/js/sb-admin-charts.min.js"></script>
+        @RenderSection("Srcipts", required: false)
     </div>
 </body>
 </html>
