--- a/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
     <div class="col-sm-9 ">
         <div class="row">
 
-            @foreach (var item in lstProperty)
+            @foreach (var item in lstProperty.Where(x=>x.Status_ID==3))
             {
                 <div class="col-sm-6 col-md-4 wow slideInLeft">
                     <div class="thumbnail projectcomponent">
