--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Edit.cshtml
@@ -160,21 +160,21 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.UserID, "UserID", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                        @Html.DropDownList("UserID", new SelectList(ViewBag.UserName, "ID", "Email", Model.USER), new { @Styles = "width: 175px; height: 25px;" })
+                        @Html.DropDownList("UserID", new SelectList(ViewBag.UserName, "ID", "FullName", Model.USER), new { @disabled = "disabled", @Styles = "width: 175px; height: 25px;"})
                         @Html.ValidationMessageFor(model => model.UserID)
                     </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.Created_at, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Created_at, new { @class = "shapestyle" })
+                    @Html.TextBoxFor(model => model.Created_at, new { @disabled = "disabled", @class = "shapestyle"})
                     @Html.ValidationMessageFor(model => model.Created_at)
                 </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.Create_post, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Create_post, new { @class = "shapestyle" })
+                    @Html.TextBoxFor(model => model.Create_post, new { @disabled = "disabled",@class = "shapestyle" })
                     @Html.ValidationMessageFor(model => model.Create_post)
                 </div>
             </div>
@@ -195,7 +195,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Updated_at, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Updated_at, new { @class = "shapestyle" })
+                    @Html.TextBoxFor(model => model.Updated_at, new { @disabled = "disabled", @class = "shapestyle" })
                     @Html.ValidationMessageFor(model => model.Updated_at)
                 </div>
             </div>
