--- a/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
@@ -54,12 +54,20 @@
                         <li><a href="~//Agency/PropertyAgency/Create">Post</a></li>
 
                         <li><a href="~/Account/LogOut">Log out</a></li>
+                        
                     }
                     else
                     {
                         <li><a href="/Account/Login">Login</a></li>
                     }
                 </ul>
+                @if(Session["UserID"] != null)
+                {
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="navbar-right"><a>Welcome @Session["Fullname"]</a></li>
+                </ul>
+                }
+
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
