--- a/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Create.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Create.cshtml
@@ -27,33 +27,31 @@
                     @Html.ValidationMessageFor(model => model.PropertyName)
                 </div>
             </div>
-
             <div class="form-group">
                 @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
+                 
                     <div style="margin-left: 50px;">
-                        <input type="file" name="AvatarUpload" />
-                    </div>
-                </div>
-                @if(ViewBag.Error!=null)
-                {
-                    <div>@ViewBag.Error</div>
-                }
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Images, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <div style="margin-left: 50px;">
-                        <input type="file" name="files" multiple />
+                        <input type="file" name="ImageFile" />
                     </div>
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.PropertyType_ID, "PropertyType", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("PropertyType_ID", new SelectList(ViewBag.property_type, "ID", "CodeType"))
+                @Html.LabelFor(model => model.Images, new { @class = "control-label col-md-4" })
+                <div class="col-md-4">
+                    <label class="control-label">Select File</label>
+                    <input name="ImageFile2" type="file" multiple>
+                    
+                    @Html.ValidationMessageFor(model => model.Images)
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.PropertyType_ID, "PropertyType_ID", new { @class = "control-label col-md-4" })
+                <div class="col-md-4 input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon glyphicon-info-sign"></i></span>
+                    @Html.DropDownList("PropertyType_ID", null, String.Empty, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.PropertyType_ID)
                 </div>
             </div>
@@ -69,7 +67,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Street_ID, "Street", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("Street_ID", new SelectList(ViewBag.street, "ID", "StreetName"))
+                    @Html.DropDownList("Street_ID", null, String.Empty, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Street_ID)
                 </div>
             </div>
@@ -77,7 +75,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Ward_ID, "Ward_ID", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("Ward_ID", new SelectList(ViewBag.ward, "ID", "WardName"))
+                    @Html.DropDownList("Ward_ID", null, String.Empty, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Ward_ID)
                 </div>
             </div>
@@ -85,7 +83,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.District_ID, "District", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("District_ID", new SelectList(ViewBag.district, "ID", "DistrictName"))
+                   @Html.DropDownList("District_ID", null, String.Empty, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.District_ID)
                 </div>
             </div>
