--- a/PPCRental_Project/PPCRental_Project/Assets/css/sb-admin.css
+++ b/PPCRental_Project/PPCRental_Project/Assets/css/sb-admin.css
@@ -8,19 +8,27 @@ html {
   min-height: 100%; }
 
 body {
-  overflow-x: hidden; }
+    overflow-x: hidden;
+    background-color: yellow;
+}
 
 body.sticky-footer {
   margin-bottom: 56px; }
-  body.sticky-footer .content-wrapper {
-    min-height: calc(100vh - 56px - 56px); }
+    body.sticky-footer .content-wrapper {
+        min-height: calc(100vh - 56px - 56px);
+        background: #ADA996; /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    }
 
 body.fixed-nav {
   padding-top: 56px; }
 
 .content-wrapper {
-  min-height: calc(100vh - 56px);
-  padding-top: 1rem; }
+    min-height: calc(100vh - 56px);
+    padding-top: 1rem;
+   
+}
 
 .scroll-to-top {
   position: fixed;
