--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -18,6 +18,8 @@
     <link href="/Assets/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
     <!-- Custom styles for this template-->
     <link href="/Assets/css/sb-admin.css" rel="stylesheet">
+    <!--Boostrap glyphicon-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
     <!-- Navigation-->
@@ -127,7 +129,7 @@
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link" href="~/Account/LogOut" style="margin-left:800px">
+                    <a class="nav-link" href="~/Admin/Account/LogOut" style="margin-left:800px">
                         <i class="fa fa-fw fa-sign-out"></i>Logout
                     </a>
                 </li>
