--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Account/Login.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     Layout = null;
     if (Session["UserID"] != null)
     {
@@ -27,13 +26,12 @@
     <!-- Button Mixin-->
     <!-- Form Module-->
     <div class="module form-module">
-        <div class="toggle">
-            <i class="fa fa-times fa-pencil"></i>
-            <div class="tooltip">Click Me</div>
+        <div>
+
         </div>
         <div class="form">
             <h2>Login to your account</h2>
-            <form action="/Account/Login" method="post">
+            <form action="~/Admin/Account/Login" method="post">
                 @if (ViewBag.messageStatus != null)
                 {
                     <div>@ViewBag.messageStatus</div>
@@ -47,22 +45,10 @@
                 <button type="submit">Login</button>
             </form>
         </div>
-        <div class="form">
-            <h2>Create an account</h2>
-            <form>
-                <input type="text" placeholder="Email Address" />
-                <input type="password" placeholder="Password" />
-                <input type="email" placeholder="Full Name" />
-                <input type="tel" placeholder="Phone Number" />
-                <input type="text" placeholder="Address" />
-                <button type="submit">Register</button>
-            </form>
-        </div>
-        <div class="cta"><a href="http://andytran.me">Forgot your password?</a></div>
     </div>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://codepen.io/andytran/pen/vLmRVp.js'></script>
-    <script src="~/Scripts/loginscripts.js"></script>
+    <script src="~/Scripts/loginscript.js"></script>
 </body>
 </html>
 
