--- a/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Create.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     if (Session["UserID"] == null)
     {
-        Response.Redirect("~/Home/Index");
+        Response.Redirect("~/Account/Login");
     }
 }
 
