funtion change password demo

--- a/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
@@ -273,5 +273,14 @@
     <!--End Filter-->
 
 </div>
+@if (TempData["messagefilter"] != null)
+{
+    <script type="text/javascript">
+        window.onload = function () {
+            alert("@(TempData["messagefilter"] as string)");
+        };
+    </script>
+}
+
 <script src="~/Scripts/jquery.twbsPagination.js"></script>
 <script src="~/Scripts/jquery.twbsPagination.min.js"></script>
