--- a/PPCRental_Project/PPCRental_Project/Views/Home/About.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Home/About.cshtml
@@ -3,7 +3,6 @@
     Layout = null;
 }
 
-
     <link id='contact-form-7-css' href="~/Content/wp-content/plugins/contact-form-7/includes/css/styles.css" rel="stylesheet" />
     <link id='css-css' href="~/Content/wp-content/themes/vpwtheme/style.css" rel="stylesheet" />
     <link id='css_5-css' href="~/Content/wp-content/themes/vpwtheme/css/skel.css" rel="stylesheet" />
@@ -43,7 +42,7 @@
     <div class="top_banner">
         <div class="top_banner_content">
             <!-- Header -->
-            <h1 id="logo"><a href="#"><img src="~/Images/Logo.png" style="width:150px;height:45px"/></a></h1>
+            <h1 id="logo"><a href="#"><img src="~/Images/logo.png" style="width:150px;height:45px"/></a></h1>
             <!-- Nav -->
             <div class="ml_menu">
                 <div id="voudoo-menu">
@@ -176,7 +175,7 @@
  
 
     <div class="flag1">
-        <img src="" width="100%" style="">
+        <img src=""  style="width :100%">
     </div>
     <link href="http://hungthinhcorp.com.vn/src-popup/jAlert-v3.css" rel="stylesheet" type="text/css">
     <script src="http://hungthinhcorp.com.vn/src-popup/jAlert-v3.js"></script>
@@ -189,20 +188,10 @@
         <div class="footer_content">
             <!--<div class="footer_left">-->
             <div style="float:left">
-                © Copyright 2017 - PPC Rental - K21T3 - Team1<div style="float:right; padding-top:0px; margin-left:10px;" class="flag">
+                © Copyright 2017  PPC Rental - Competition<div style="float:right; padding-top:0px; margin-left:10px;" class="flag">
 
-                    <object width="24" height="23" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
-                        <param value="wp-content/themes/vpwtheme/flash/speaker1.swf" name="movie">
-                        <param value="high" name="quality">
-                        <param value="transparent" name="wmode">
-                        <embed width="24" height="23" pluginspage="http://www.macromedia.com/go/getflashplayer" wmode="transparent" type="application/x-shockwave-flash" quality="high" src="wp-content/themes/vpwtheme/flash/speaker1.swf">
-                    </object>
-
-                    <!--    <a href="javascript:void(0)" id="mute" onClick="muted()" >
-                    <img src="http://lavitagarden.com.vn/official/images/vo_on.png" width="15" /></a>
-                    -->
-                </div>
-                <!--</div>-->
+                   
+            </div>
             </div>
             <div class="footer_right">
                 <div style="float:left"><strong>Hotline: (028) 1234 5678</strong></div>
