--- a/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
@@ -241,7 +241,7 @@
                     <!--End Bathroom Filter-->
                     <!--Price min Filter-->
                     <select name="Price_Min" class="dropdown col-md-12 component_filter">
-                        <option value="0" " selected>--Chọn Giá Tối Thiểu--</option>
+                        <option value="0" selected>--Chọn Giá Tối Thiểu--</option>
                         <option value="10000">10000</option>
                         <option value="30000">30000</option>
                         <option value="50000">50000</option>
