--- a/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-img" href="#">
-                    <img src="~/Images/PPCRentalLogo.png" style="height:50px; width:150px" />
+                    <img src="~/Images/Logo.png" style="height:50px; width:150px" />
                 </a>
             </div>
 
