--- a/PPCRental_Project/PPCRental_Project/Content/wp-content/themes/vpwtheme/css/voudoo-menu.css
+++ b/PPCRental_Project/PPCRental_Project/Content/wp-content/themes/vpwtheme/css/voudoo-menu.css
@@ -14,8 +14,8 @@ nav {
 #voudoo-menu ul li { float: left;  }
 
 #voudoo-menu ul li a {
-  font-family: 'utm_helvetinsregular1';
-  font-size:11px;
+  font-family: Calibri;
+  font-size:20px;
   cursor: pointer;
   position: relative;
   display: block;
@@ -24,8 +24,8 @@ nav {
   padding:7px 5px 7px 5px;
   margin:0 5px;
   text-transform:uppercase;  
-  color:#FFF;
-  font:normal 11px Arial, Helvetica, sans-serif;
+  color:#595959;
+  font:normal 15px Calibri;
   text-transform:uppercase;
   letter-spacing:0.5px;
 
